Ventana De super Administrador
Se agrego la pagina de super Administrador, y se probo el inicio de sección de los demas usuarios los cuales funcionan bien, pero el del administrador  no entra a la pagina correspondiente.

--- a/Frontend/admin/styles-admin.css
+++ b/Frontend/admin/styles-admin.css
@@ -236,7 +236,7 @@ a {
 
 
 /* Doctores */
-.doctors--right--btns {
+.employees--right--btns {
     display: flex;
     align-items: center;
     gap: 30px;
@@ -263,7 +263,7 @@ a {
     border-radius: 50%;
     color: #000;
 }
-.doctors--cards {
+.employees--cards {
     display: flex;
     gap: 20px;
 }
@@ -305,7 +305,7 @@ a {
 /* responsive starts here */
 @media screen and (max-width:1350px) {
     .cards,
-    .doctors--cards {
+    .employees--cards {
         overflow-x: scroll;
     }
 }
