--- a/Frontend/Admin/styles-super-admin.css
+++ b/Frontend/Admin/styles-super-admin.css
@@ -385,20 +385,15 @@ a {
     background-color: #f9f9f9;
     border-radius: 5px;
 }
-employee-details {
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    background-color: #f9f9f9;
-    border-radius: 5px;
-}
-.employees-table button {
-    background-color: red;
+
+button {
+    background-color: #ec7777;
     color: white;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
+    border-radius: 5px;
 }
-.employees-table button:hover {
-    background-color: darkred;
+button:hover {
+    background-color: #da8787;
 }
