Se actualiza el boton de deshabilitar empleado asi como se implementa la funcionalidad de bscrypt para el hash de las contraseñas

--- a/Frontend/Admin/styles-super-admin.css
+++ b/Frontend/Admin/styles-super-admin.css
@@ -365,7 +365,7 @@ a {
 }
 
 .employees-table td button {
-    background-color: #007BFF;
+    background-color: #f15a5a;
     color: white;
     border: none;
     padding: 5px 10px;
