--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -1,23 +1,32 @@
+/* Estilos generales del cuerpo de la página */
 body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #f4f7fa; 
+    background-color: #f4f7fa;
     height: 100vh;
-    color: #333; 
+    color: #333;
 }
 
 
+/* Contenedor principal para la página de inicio de sesión */
 .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     padding: 0 20px;
+
 }
 
 
-.image-container {
+.image-container-mobile {
+    display: none;
+}
+
+
+/* Contenedor para las imágenes */
+.image-container-desktop {
     flex: 1;
     text-align: center;
     max-width: 450px;
@@ -25,23 +34,17 @@ body {
 }
 
 
-.image-container img {
-    width: 100%;
-    max-width: 350px;
+/* Estilos para las imágenes dentro del contenedor */
+.image-container-desktop img {
+    width: 105%;
     height: auto;
     border-radius: 15px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease-in-out;
     object-fit: cover;
 }
 
 
-.image-container img:hover {
-    transform: scale(1.05); 
-    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2); 
-}
-
-
+/* Contenedor del formulario de inicio de sesión */
 .login {
     padding: 30px;
     background-color: #fff;
@@ -52,15 +55,17 @@ body {
 }
 
 
+/* Estilos para el título del formulario de inicio de sesión */
 .login h1 {
     text-align: center;
     font-size: 28px;
-    color: #0073e6; 
+    color: #0073e6;
     padding-bottom: 20px;
     border-bottom: 3px solid #d9d9d9;
 }
 
 
+/* Estilos para el formulario de inicio de sesión */
 .login form {
     display: flex;
     flex-direction: column;
@@ -69,14 +74,17 @@ body {
 }
 
 
+/* Contenedor para el campo de nombre de usuario */
 form .username {
     position: relative;
     width: 100%;
 }
 
+/* Estilos para el campo de entrada del nombre de usuario */
 .username input {
-    width: 100%;
-    padding: 12px 15px;
+    width: calc(100% - 20px);
+    margin: 0 10px;
+    padding: 12px 2px;
     font-size: 16px;
     border: 2px solid #d9d9d9;
     border-radius: 10px;
@@ -85,13 +93,13 @@ form .username {
     transition: all 0.3s ease;
 }
 
-
+/* Estilos cuando el campo de nombre de usuario está en foco */
 .username input:focus {
-    border-color: #0073e6; 
-    background-color: #ffffff; 
+    border-color: #0073e6;
+    background-color: #ffffff;
 }
 
-
+/* Estilos para la etiqueta del nombre de usuario */
 .username label {
     position: absolute;
     top: -10px;
@@ -103,24 +111,11 @@ form .username {
     transition: 0.3s ease;
 }
 
-
-.recordar {
-    text-align: right;
-    color: #0073e6;
-    cursor: pointer;
-    font-size: 14px;
-    text-decoration: none;
-}
-
-.recordar:hover {
-    text-decoration: underline;
-}
-
-
+/* Estilos para el botón de envío */
 input[type="submit"] {
     width: 100%;
     height: 50px;
-    background-color: #0073e6; 
+    background-color: #0073e6;
     color: #fff;
     border: none;
     border-radius: 25px;
@@ -130,13 +125,13 @@ input[type="submit"] {
     outline: none;
 }
 
-
+/* Estilos cuando el botón de envío está en hover */
 input[type="submit"]:hover {
-    background-color: #005bb5; 
+    background-color: #005bb5;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-
+/* Estilos para el contenedor modal */
 .modal {
     display: flex;
     justify-content: center;
@@ -149,6 +144,7 @@ input[type="submit"]:hover {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+/* Estilos para el contenido dentro del modal */
 .modal-content {
     background-color: #ffffff;
     padding: 20px;
@@ -158,6 +154,7 @@ input[type="submit"]:hover {
     max-width: 450px;
 }
 
+/* Estilos para el botón cerrar en el modal */
 .close {
     position: absolute;
     top: 15px;
@@ -165,6 +162,8 @@ input[type="submit"]:hover {
     font-size: 24px;
     cursor: pointer;
 }
+
+/* Estilos para el texto de carga */
 .loading {
     font-size: 14px;
     color: #888;
@@ -173,27 +172,108 @@ input[type="submit"]:hover {
 }
 
 
+.reset-password-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+}
+
+.reset-password {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    text-align: center;
+    max-width: 400px;
+    width: 100%;
+}
+
+.reset-password h1 {
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+    color: #333;
+}
+
+.reset-password form .password {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.reset-password form .password input {
+    width: 100%;
+    padding: 10px 0.1px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.reset-password form .password label {
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background-color: #fff;
+    padding: 0 5px;
+    font-size: 0.8rem;
+    color: #555;
+}
+
+.reset-password input[type="submit"] {
+    background-color: #5073fb;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.reset-password input[type="submit"]:hover {
+    background-color: #405ac2;
+}
+
+/* Estilos para pantallas con ancho máximo de 768px */
 @media (max-width: 768px) {
+
+
+
     .login-container {
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
         padding: 20px;
     }
 
-    .image-container img {
-        max-width: 250px;
+    .image-container-mobile {
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .image-container-desktop {
+        display: none;
     }
 
     .login {
         width: 100%;
+        background-color: #fff;
+        border-radius: 20px;
+        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+        padding: 30px;
+    }
+    .reset-password-container {
         padding: 20px;
-    }
-
-    .login h1 {
-        font-size: 24px;
-    }
-
-    input[type="submit"] {
-        height: 45px;
+        min-height: auto;
     }
 }
+
+
 
