--- a/Frontend/Manager_area/styles-admin.css
+++ b/Frontend/Manager_area/styles-admin.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
 body {
     position: relative;
     width: 100%;
 }
+
 .header {
     height: 60px;
     width: 100%;
@@ -15,15 +17,18 @@ body {
     align-items: center;
     border-bottom: 2px solid #f1f1f1;
 }
+
 .logo {
     display: flex;
     align-items: center;
     width: 300px;
     padding-left: 40px;
 }
+
 .logo span {
     color: #5073fb;
 }
+
 .search--notification--profile {
     display: flex;
     align-items: center;
@@ -31,6 +36,7 @@ body {
     width: calc(100% - 300px);
     padding: 0 40px;
 }
+
 .search {
     background-color: #f1f4f8;
     border-radius: 50px;
@@ -40,6 +46,7 @@ body {
     align-items: center;
     justify-content: space-between;
 }
+
 .search input {
     background-color: transparent;
     outline: none;
@@ -52,12 +59,14 @@ body {
     display: flex;
     align-items: center;
 }
+
 .picon {
     margin-left: 20px;
     font-size: 1.1rem;
     padding: 5px;
     border-radius: 5px;
 }
+
 .lock {
     position: relative;
     width: 20px;
@@ -73,6 +82,7 @@ body {
     border-radius: 50%;
     overflow: hidden;
 }
+
 img {
     position: absolute;
     top: 0;
@@ -81,11 +91,13 @@ img {
     height: 100%;
     object-fit: cover;
 }
+
 .main {
     position: relative;
     width: 100%;
     min-height: calc(100vh - 60px);
 }
+
 /* Menu lateral  */
 .sidebar {
     position: absolute;
@@ -101,19 +113,24 @@ img {
     border-right: 2px solid #f1f1f1;
     transition: .3s;
 }
+
 .sidebar.active {
     width: 103px;
     overflow: hidden;
 }
+
 .sidebar.active .sidebar--item {
     display: none;
 }
+
 li {
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
+
 .sidebar--items a,
 .sidebar--bottom-items a {
     display: flex;
@@ -124,18 +141,22 @@ a {
     padding: 10px;
     border-radius: 10px;
 }
+
 .sidebar--items a:hover,
 .sidebar--bottom-items a:hover {
     background-color: #5073fb;
     color: #fff;
 }
+
 #active--link {
     background-color: #5073fb;
     color: #fff;
 }
+
 .sidebar--bottom-items li:last-child a {
     margin-bottom: 0;
 }
+
 .icon {
     position: relative;
     display: flex;
@@ -144,12 +165,15 @@ a {
     margin-right: 20px;
     font-size: 1.3rem;
 }
+
 .icon-0 {
     color: #5073fb;
 }
+
 .icon-1 {
     color: #c5bc58;
 }
+
 .icon-2 {
     color: #a280e9;
 }
@@ -165,9 +189,11 @@ a {
     overflow-y: scroll;
     transition: .3s;
 }
+
 .main--content.active {
     width: calc(100% - 103px);
 }
+
 .title {
     display: flex;
     align-items: center;
@@ -175,9 +201,11 @@ a {
     margin-bottom: 10px;
     margin-top: 30px;
 }
+
 .section--title {
     font-weight: 400;
 }
+
 .dropdown {
     outline: none;
     border: none;
@@ -186,10 +214,12 @@ a {
     width: 150px;
     padding: 5px;
 }
+
 .cards {
     display: flex;
     gap: 20px;
 }
+
 .card {
     padding: 20px;
     border-radius: 20px;
@@ -197,24 +227,29 @@ a {
     height: auto;
     transition: .3s;
 }
+
 .card:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 .card--data {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
 }
+
 .card h1 {
     font-size: 30px;
     margin-top: 10px;
 }
+
 .card--stats {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 5px;
 }
+
 .card--stats span {
     display: flex;
     align-items: center;
@@ -223,6 +258,7 @@ a {
 .card-1 {
     background-color: rgba(80, 115, 251, .1);
 }
+
 .card-1 .card--title {
     color: rgba(80, 115, 251, 1);
 }
@@ -230,6 +266,7 @@ a {
 .card-2 {
     background-color: rgba(241, 210, 67, .1);
 }
+
 .card-2 .card--title {
     color: rgba(241, 210, 67, 1);
 }
@@ -241,6 +278,7 @@ a {
     align-items: center;
     gap: 30px;
 }
+
 .add {
     display: flex;
     align-items: center;
@@ -253,9 +291,11 @@ a {
     cursor: pointer;
     transition: .3s;
 }
+
 .add:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 .add i {
     margin-right: 10px;
     padding: 5px;
@@ -263,10 +303,12 @@ a {
     border-radius: 50%;
     color: #000;
 }
+
 .employees--cards {
     display: flex;
     gap: 20px;
 }
+
 .doctor--card {
     padding: 20px;
     border-radius: 20px;
@@ -278,9 +320,11 @@ a {
     align-items: center;
     font-size: .8rem;
 }
+
 .doctor--card:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 .img--box--cover {
     border: 1px solid #5073fb;
     padding: 2px;
@@ -288,6 +332,7 @@ a {
     display: inline-block;
     margin-bottom: 10px;
 }
+
 .img--box {
     position: relative;
     width: 71px;
@@ -295,12 +340,15 @@ a {
     overflow: hidden;
     border-radius: 50%;
 }
+
 .free {
     color: #70d7a5;
 }
+
 .busy {
     color: #fb5050;
 }
+
 /*Tabla de empleados asignados */
 table {
     width: 100%;
@@ -353,6 +401,7 @@ button {
 button:hover {
     background-color: #405bb5;
 }
+
 /* Asignar la tarea  */
 .formulario-tarea {
     max-width: 800px;
@@ -384,6 +433,11 @@ button:hover {
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.formulario-horizontal .button-container {
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* Diseño de grupo horizontal de etiquetas e inputs */
@@ -426,16 +480,23 @@ button:hover {
     border-color: #5073fb;
     outline: none;
     background-color: #fff;
+
 }
 
-.formulario-tarea button.btn-icon {
+
+.formulario-tarea .button-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.formulario-tarea .button-container button.btn-icon {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 50px;
     height: 50px;
     padding: 0;
-    background-color: #5073fb;
+    background-color: #9a0f0f;
     color: #fff;
     border: none;
     border-radius: 50%; /* Botón redondeado */
@@ -444,95 +505,116 @@ button:hover {
     transition: background-color 0.3s, box-shadow 0.3s;
 }
 
-.formulario-tarea button.btn-icon:hover {
+.formulario-tarea .button-container button.btn-icon:hover {
     background-color: #405bb5;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.formulario-tarea button.btn-icon i {
-    pointer-events: none; /* Asegúrate de que el ícono no interfiere con el clic del botón */
-}
 
 
-/* responsive starts here */
-@media screen and (max-width:1350px) {
-    .cards,
-    .employees--cards {
-        overflow-x: scroll;
+    .formulario-tarea button.btn-icon:hover {
+        background-color: #405bb5;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
-}
-@media screen and (max-width:1024px) {
-    table {
-        min-width: 600px;
+
+    .formulario-tarea button.btn-icon i {
+        pointer-events: none; /* Asegúrate de que el ícono no interfiere con el clic del botón */
     }
-}
-@media screen and (max-width:768px) {
-    .logo {
-        padding-left: 30px;
-        width: fit-content;
+
+
+    /* responsive starts here */
+    @media screen and (max-width: 1350px) {
+        .cards,
+        .employees--cards {
+            overflow-x: scroll;
+        }
     }
-    .search--notification--profile {
-        padding: 0 20px;
-        margin-left: auto;
+    @media screen and (max-width: 1024px) {
+        table {
+            min-width: 600px;
+        }
     }
-    .main--content {
-        padding: 0 20px;
+    @media screen and (max-width: 768px) {
+        .logo {
+            padding-left: 30px;
+            width: fit-content;
+        }
+
+        .search--notification--profile {
+            padding: 0 20px;
+            margin-left: auto;
+        }
+
+        .main--content {
+            padding: 0 20px;
+        }
+
+        .sidebar {
+            padding: 20px;
+        }
+
+        .sidebar.active {
+            width: 85px;
+        }
+
+        .main--content.active {
+            width: calc(100% - 85px);
+        }
     }
-    .sidebar {
-        padding: 20px;
+    @media screen and (max-width: 590px) {
+        .search,
+        .lock,
+        .chat {
+            display: none;
+        }
+
+        .notification--profile {
+            margin-left: auto;
+        }
+
+        .search--notification--profile {
+            width: fit-content;
+        }
+
+        .sidebar {
+            transform: translateX(-100%);
+            z-index: 10;
+            background-color: #fff;
+        }
+
+        .sidebar.active {
+            transform: translateX(0);
+            width: 300px;
+        }
+
+        .sidebar.active .sidebar--item {
+            display: block;
+        }
+
+        .main--content {
+            width: calc(100% - 0px);
+        }
+
+        .main--content.active {
+            width: calc(100% - 0px);
+        }
     }
-    .sidebar.active {
-        width: 85px;
-    }
-    .main--content.active {
-        width: calc(100% - 85px);
-    }
-}
-@media screen and (max-width:590px) {
-    .search,
-    .lock,
-    .chat {
-        display: none;
-    }
-    .notification--profile {
-        margin-left: auto;
-    }
-    .search--notification--profile {
-        width: fit-content;
-    }
-    .sidebar {
-        transform: translateX(-100%);
-        z-index: 10;
-        background-color: #fff;
-    }
-    .sidebar.active {
-        transform: translateX(0);
-        width: 300px;
-    }
-    .sidebar.active .sidebar--item {
-        display: block;
-    }
-    .main--content {
-        width: calc(100% - 0px);
-    }
-    .main--content.active {
-        width: calc(100% - 0px);
-    }
-}
-@media screen and (max-width:450px) {
-    .doctor--filter {
-        display: none;
-    }
-    .main--content {
-        padding: 0 10px;
-    }
-    .logo {
-        padding-left: 10px;
-    }
-    .search--notification--profile {
-        padding: 0 10px;
-    }
-    .sidebar {
-        padding: 10px;
+    @media screen and (max-width: 450px) {
+        .doctor--filter {
+            display: none;
+        }
+
+        .main--content {
+            padding: 0 10px;
+        }
+
+        .logo {
+            padding-left: 10px;
+        }
+
+        .search--notification--profile {
+            padding: 0 10px;
+        }
+
+        .sidebar {
+            padding: 10px;
+        }
     }
 }
