--- a/Frontend/Admin/styles-super-admin.css
+++ b/Frontend/Admin/styles-super-admin.css
@@ -8,7 +8,6 @@ body {
     position: relative;
     width: 100%;
 }
-
 .header {
     height: 60px;
     width: 100%;
@@ -16,55 +15,33 @@ body {
     align-items: center;
     border-bottom: 2px solid #f1f1f1;
 }
+
 .logo {
     display: flex;
     align-items: center;
     width: 300px;
     padding-left: 40px;
 }
+
 .logo span {
     color: #5073fb;
 }
+
 .search--notification--profile {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: calc(100% - 300px);
     padding: 0 40px;
 }
-.search {
-    background-color: #f1f4f8;
-    border-radius: 50px;
-    width: 400px;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.search input {
-    background-color: transparent;
-    outline: none;
-    border: none;
-    text-indent: 15px;
-    width: 85%;
-}
-
 .notification--profile {
     display: flex;
     align-items: center;
 }
-.picon {
-    margin-left: 20px;
-    font-size: 1.1rem;
-    padding: 5px;
-    border-radius: 5px;
-}
-.lock {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    overflow: hidden;
+
+.button--notification--profile{
+    background: transparent;
+    font-size: x-large;
 }
 
 .profile {
@@ -74,6 +51,13 @@ body {
     border-radius: 50%;
     overflow: hidden;
 }
+
+.main {
+    position: relative;
+    width: 100%;
+    min-height: calc(100vh - 60px);
+}
+
 img {
     position: absolute;
     top: 0;
@@ -81,11 +65,6 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-.main {
-    position: relative;
-    width: 100%;
-    min-height: calc(100vh - 60px);
 }
 /* Menu lateral  */
 .sidebar {
@@ -178,14 +157,7 @@ a {
 .section--title {
     font-weight: 400;
 }
-.dropdown {
-    outline: none;
-    border: none;
-    background-color: #f1f4f8;
-    border-radius: 5px;
-    width: 150px;
-    padding: 5px;
-}
+
 
 /* Empleados */
 .employees--right--btns {
@@ -252,6 +224,120 @@ a {
 }
 .busy {
     color: #fb5050;
+}
+/* Ajusta los filtros  */
+.filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.dropdown {
+    text-align: left;
+    border-radius: 15px;
+}
+
+.search {
+    background-color: #f1f4f8;
+    border-radius: 50px;
+    width: 400px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search input {
+    background-color: transparent;
+    outline: none;
+    border: none;
+    text-indent: 15px;
+    width: 85%;
+}
+
+
+.employees-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: left;
+}
+
+.employees-table th, .employees-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.employees-table th {
+    background-color: #007BFF;
+    color: white;
+    font-weight: bold;
+}
+
+.employees-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.employees-table tr:hover {
+    background-color: #ddd;
+}
+
+.employees-table td button {
+    background-color: #54b6b6;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.employees-table td button:hover {
+    background-color: #0056b3;
+}
+
+.employee-details {
+    margin-top: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+
+.btn-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    background-color: #5073fb;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.btn-icon:hover {
+    background-color: #405bb5;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.btn-icon i {
+    pointer-events: none;
+}
+
+/* Estilo específico para botón de deshabilitar */
+.btn-icon.btn-icon-disable {
+    background-color: #e74c3c;
+}
+
+.btn-icon.btn-icon-disable:hover {
+    background-color: #c0392b;
 }
 
 /* responsive starts here */
@@ -347,87 +433,4 @@ a {
     .sidebar {
         padding: 10px;
     }
-}
-
-.employees-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-    font-size: 18px;
-    text-align: left;
-}
-
-.employees-table th, .employees-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-.employees-table th {
-    background-color: #007BFF;
-    color: white;
-    font-weight: bold;
-}
-
-.employees-table tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-.employees-table tr:hover {
-    background-color: #ddd;
-}
-
-.employees-table td button {
-    background-color: #5af1f1;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 14px;
-}
-
-.employees-table td button:hover {
-    background-color: #0056b3;
-}
-
-.employee-details {
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    background-color: #f9f9f9;
-    border-radius: 5px;
-}
-
-.btn-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    background-color: #5073fb;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    font-size: 1.2rem;
-    cursor: pointer;
-    transition: background-color 0.3s, box-shadow 0.3s;
-}
-
-.btn-icon:hover {
-    background-color: #405bb5;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.btn-icon i {
-    pointer-events: none;
-}
-
-/* Estilo específico para botón de deshabilitar */
-.btn-icon.btn-icon-disable {
-    background-color: #e74c3c;
-}
-
-.btn-icon.btn-icon-disable:hover {
-    background-color: #c0392b;
 }
