--- a/Frontend/Manager_area/styles-admin.css
+++ b/Frontend/Manager_area/styles-admin.css
@@ -9,7 +9,6 @@ body {
     position: relative;
     width: 100%;
 }
-
 .header {
     height: 60px;
     width: 100%;
@@ -32,48 +31,21 @@ body {
 .search--notification--profile {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: calc(100% - 300px);
     padding: 0 40px;
 }
-
-.search {
-    background-color: #f1f4f8;
-    border-radius: 50px;
-    width: 400px;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.search input {
-    background-color: transparent;
-    outline: none;
-    border: none;
-    text-indent: 15px;
-    width: 85%;
-}
-
 .notification--profile {
     display: flex;
     align-items: center;
 }
 
-.picon {
-    margin-left: 20px;
-    font-size: 1.1rem;
-    padding: 5px;
-    border-radius: 5px;
+.button--notification--profile{
+    background: transparent;
+    font-size: x-large;
 }
 
-.lock {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    overflow: hidden;
-}
+
 
 .profile {
     position: relative;
@@ -83,6 +55,12 @@ body {
     overflow: hidden;
 }
 
+.main {
+    position: relative;
+    width: 100%;
+    min-height: calc(100vh - 60px);
+}
+
 img {
     position: absolute;
     top: 0;
@@ -90,12 +68,6 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.main {
-    position: relative;
-    width: 100%;
-    min-height: calc(100vh - 60px);
 }
 
 /* Menu lateral  */
@@ -348,6 +320,9 @@ a {
 .busy {
     color: #fb5050;
 }
+.user{
+
+}
 
 /*Tabla de empleados asignados */
 table {
@@ -389,13 +364,17 @@ tbody td {
 }
 
 button {
-    background-color: #5073fb;
-    color: #fff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+}
+.btn-icon1{
+    background-color: #41a7a9;
+}
+.btn-icon2{
+    background-color: #99d593;
 }
 
 button:hover {
