--- a/Frontend/Manager_area/styles-admin.css
+++ b/Frontend/Manager_area/styles-admin.css
@@ -54,7 +54,17 @@ body {
     border-radius: 50%;
     overflow: hidden;
 }
-
+.header-user{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: calc(100% - 300px);
+    padding: 0 40px;
+}
+.user{
+    display: flex;
+    text-align: center;
+}
 .main {
     position: relative;
     width: 100%;
