--- a/Frontend/Manager_area/styles-admin.css
+++ b/Frontend/Manager_area/styles-admin.css
@@ -37,6 +37,19 @@ body {
     padding: 0 40px;
 }
 
+
+.bar--profile {
+    display: flex;
+    align-items: center;
+}
+
+
+.button--bar--profile {
+    background: transparent;
+    font-size: x-large;
+}
+
+
 .notification--profile {
     display: flex;
     align-items: center;
@@ -165,6 +178,8 @@ a {
 }
 
 /* Contenedor Principal  */
+
+
 .main--content {
     position: absolute;
     top: 0;
@@ -617,109 +632,11 @@ button:hover {
 }
 
 .formulario-tarea button.btn-icon i {
-    pointer-events: none; /* Asegúrate de que el ícono no interfiere con el clic del botón */
+    pointer-events: none;
 }
 
 
 /* responsive starts here */
-@media screen and (max-width: 1350px) {
-    .cards,
-    .employees--cards {
-        overflow-x: scroll;
-    }
-}
+@media (max-width: 768px) {
 
-@media screen and (max-width: 1024px) {
-    table {
-        min-width: 600px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .logo {
-        padding-left: 30px;
-        width: fit-content;
-    }
-
-    .search--notification--profile {
-        padding: 0 20px;
-        margin-left: auto;
-    }
-
-    .main--content {
-        padding: 0 20px;
-    }
-
-    .sidebar {
-        padding: 20px;
-    }
-
-    .sidebar.active {
-        width: 85px;
-    }
-
-    .main--content.active {
-        width: calc(100% - 85px);
-    }
-}
-
-@media screen and (max-width: 590px) {
-    .search,
-    .lock,
-    .chat {
-        display: none;
-    }
-
-    .notification--profile {
-        margin-left: auto;
-    }
-
-    .search--notification--profile {
-        width: fit-content;
-    }
-
-    .sidebar {
-        transform: translateX(-100%);
-        z-index: 10;
-        background-color: #fff;
-    }
-
-    .sidebar.active {
-        transform: translateX(0);
-        width: 300px;
-    }
-
-    .sidebar.active .sidebar--item {
-        display: block;
-    }
-
-    .main--content {
-        width: calc(100% - 0px);
-    }
-
-    .main--content.active {
-        width: calc(100% - 0px);
-    }
-}
-
-@media screen and (max-width: 450px) {
-    .doctor--filter {
-        display: none;
-    }
-
-    .main--content {
-        padding: 0 10px;
-    }
-
-    .logo {
-        padding-left: 10px;
-    }
-
-    .search--notification--profile {
-        padding: 0 10px;
-    }
-
-    .sidebar {
-        padding: 10px;
-    }
 }
