--- a/Frontend/Admin/styles-super-admin.css
+++ b/Frontend/Admin/styles-super-admin.css
@@ -4,16 +4,17 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
 body {
     position: relative;
     width: 100%;
 }
+
 .header {
     height: 60px;
     width: 100%;
     display: flex;
     align-items: center;
-    border-bottom: 2px solid #f1f1f1;
 }
 
 .logo {
@@ -27,13 +28,13 @@ body {
     color: #5073fb;
 }
 
-.search--notification--profile {
+.search--user--profile {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: calc(100% - 300px);
     padding: 0 40px;
 }
+
 
 .bar--profile {
     display: flex;
@@ -46,15 +47,17 @@ body {
     font-size: x-large;
 }
 
+
 .notification--profile {
     display: flex;
     align-items: center;
 }
 
-.button--notification--profile{
+.button--user--profile {
     background: transparent;
     font-size: x-large;
 }
+
 
 .profile {
     position: relative;
@@ -62,6 +65,19 @@ body {
     height: 40px;
     border-radius: 50%;
     overflow: hidden;
+}
+
+.header-user {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; /* Ya está alineado a la derecha */
+    width: 100%; /* Elimina el cálculo para ocupar todo el ancho */
+    padding: 0 20px; /* Reduce el padding para que no se desplace mucho hacia adentro */
+}
+
+.user {
+    display: flex;
+    text-align: center;
 }
 
 .main {
@@ -78,6 +94,7 @@ img {
     height: 100%;
     object-fit: cover;
 }
+
 /* Menu lateral  */
 .sidebar {
     position: absolute;
@@ -93,19 +110,24 @@ img {
     border-right: 2px solid #f1f1f1;
     transition: .3s;
 }
+
 .sidebar.active {
     width: 103px;
     overflow: hidden;
 }
+
 .sidebar.active .sidebar--item {
     display: none;
 }
+
 li {
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
+
 .sidebar--items a,
 .sidebar--bottom-items a {
     display: flex;
@@ -116,17 +138,21 @@ a {
     padding: 10px;
     border-radius: 10px;
 }
+
 .sidebar--items a:hover.sidebar--bottom-items a:hover {
     background-color: #5073fb;
     color: #fff;
 }
+
 #active--link {
     background-color: #5073fb;
     color: #fff;
 }
+
 .sidebar--bottom-items li:last-child a {
     margin-bottom: 0;
 }
+
 .icon {
     position: relative;
     display: flex;
@@ -135,12 +161,15 @@ a {
     margin-right: 20px;
     font-size: 1.3rem;
 }
+
 .icon-0 {
     color: #5073fb;
 }
+
 .icon-1 {
     color: #c5bc58;
 }
+
 .icon-2 {
     color: #a280e9;
 }
@@ -156,9 +185,11 @@ a {
     overflow-y: scroll;
     transition: .3s;
 }
+
 .main--content.active {
     width: calc(100% - 103px);
 }
+
 .title {
     display: flex;
     align-items: center;
@@ -166,8 +197,97 @@ a {
     margin-bottom: 10px;
     margin-top: 30px;
 }
+
 .section--title {
     font-weight: 400;
+}
+
+.cards {
+    display: flex;
+    gap: 20px;
+}
+
+.card {
+    padding: 20px;
+    border-radius: 20px;
+    min-width: 230px;
+    height: auto;
+    transition: .3s;
+}
+
+.card:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card--data {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.card h1 {
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.card--stats {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5px;
+}
+
+.card--stats span {
+    display: flex;
+    align-items: center;
+}
+
+.card-1 {
+    background-color: rgba(65, 97, 225, 0.1);
+}
+
+.card-1 .card--title {
+    color: rgb(24, 65, 238);
+}
+
+.card-2 {
+    background-color: rgba(142, 103, 206, 0.1);
+}
+
+.card-2 .card--title {
+    color: rgba(114, 60, 225, 0.78);
+}
+
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Asegúrate de que esté sobre todo */
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    width: 90%;
+    position: relative;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    cursor: pointer;
 }
 
 
@@ -177,6 +297,7 @@ a {
     align-items: center;
     gap: 30px;
 }
+
 .add {
     display: flex;
     align-items: center;
@@ -189,34 +310,38 @@ a {
     cursor: pointer;
     transition: .3s;
 }
+
 .add:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 .add i {
     margin-right: 10px;
     padding: 5px;
-    background-color: #fff;
-    border-radius: 50%;
-    color: #000;
+    color: #ffffff;
 }
+
 .employees--cards {
-    display: flex;
+    display: ruby;
     gap: 20px;
 }
+
 .employees--card {
     padding: 20px;
     border-radius: 20px;
     height: auto;
     transition: .3s;
     border: 2px solid #f1f1f1;
-    display: flex;
+    display: ruby;
     flex-direction: column;
     align-items: center;
     font-size: .8rem;
 }
+
 .employees--card:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 .img--box--cover {
     border: 1px solid #5073fb;
     padding: 2px;
@@ -224,6 +349,7 @@ a {
     display: inline-block;
     margin-bottom: 10px;
 }
+
 .img--box {
     position: relative;
     width: 71px;
@@ -231,12 +357,15 @@ a {
     overflow: hidden;
     border-radius: 50%;
 }
+
 .free {
     color: #70d7a5;
 }
+
 .busy {
     color: #fb5050;
 }
+
 /* Ajusta los filtros  */
 .filters {
     display: flex;
@@ -388,41 +517,50 @@ a {
     font-weight: bold;
     color: #333; /* Color del texto */
 }
+
 /* responsive starts here */
-@media screen and (max-width:1350px) {
+@media screen and (max-width: 1350px) {
     .cards,
     .employees--cards {
         overflow-x: scroll;
     }
 }
-@media screen and (max-width:1024px) {
+
+@media screen and (max-width: 1024px) {
     table {
         min-width: 600px;
     }
 }
-@media screen and (max-width:768px) {
+
+@media screen and (max-width: 768px) {
     .logo {
         padding-left: 30px;
         width: fit-content;
     }
-    .search--notification--profile {
+
+    .search--user--profile {
         padding: 0 20px;
         margin-left: auto;
     }
+
     .main--content {
         padding: 0 20px;
     }
+
     .sidebar {
         padding: 20px;
     }
+
     .sidebar.active {
         width: 85px;
     }
+
     .main--content.active {
         width: calc(100% - 85px);
     }
 }
-@media screen and (max-width:480px) {
+
+@media screen and (max-width: 480px) {
     .sidebar {
         position: relative;
         width: 100%;
@@ -430,54 +568,68 @@ a {
         border-right: none;
         border-bottom: 2px solid #f1f1f1;
     }
+
     .main {
         padding-top: 60px;
     }
 }
-@media screen and (max-width:590px) {
+
+@media screen and (max-width: 590px) {
     .search,
     .lock,
     .chat {
         display: none;
     }
+
     .notification--profile {
         margin-left: auto;
     }
-    .search--notification--profile {
+
+    .search--user--profile {
         width: fit-content;
     }
+
     .sidebar {
         transform: translateX(-100%);
         z-index: 10;
         background-color: #fff;
     }
+
     .sidebar.active {
         transform: translateX(0);
         width: 300px;
     }
+
     .sidebar.active .sidebar--item {
         display: block;
     }
+
     .main--content {
         width: calc(100% - 0px);
     }
+
     .main--content.active {
         width: calc(100% - 0px);
     }
 }
-@media screen and (max-width:450px) {
+
+@media screen and (max-width: 450px) {
     .doctor--filter {
         display: none;
     }
+
     .main--content {
         padding: 0 10px;
     }
+
     .logo {
         padding-left: 10px;
     }
-    .search--notification--profile {
+
+    .search--user--profile {
         padding: 0 10px;
     }
+
     .sidebar {
         padding: 10px;
     }
